# rust_te

./: .gitignore  Cargo.toml  README.md  new.c
.github/workflows/: build.yml  format.yml  lint.yml
src/: buffer.rs  document.rs  editor.rs  filetype.rs  highlighting.rs  lib.rs  main.rs  rows.rs  terminal.rs
