[package]
name = "rust_te"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Arish <arish1248@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termion = "2.0.1"
unicode-segmentation = "1.10.1"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z"         # Optimize for size.
lto = true              # Link Time Optimization is enabled
codegen-units = 1       # allow for maximum size reduction optimizations
panic = "abort"         # Configure action to do on panic
